updated graphics code with circle path demo

--- a/graphics/Project1/Project1.vcxproj
+++ b/graphics/Project1/Project1.vcxproj
@@ -67,6 +67,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="glDriver.cpp" />
+    <ClCompile Include="graphics.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="graphics.h" />
