--- a/graphics/Project1/Project1.vcxproj.filters
+++ b/graphics/Project1/Project1.vcxproj.filters
@@ -18,6 +18,9 @@
     <ClCompile Include="glDriver.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="graphics.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="graphics.h">
