--- a/release/DepthBasics-D2D.vcxproj
+++ b/release/DepthBasics-D2D.vcxproj
@@ -167,21 +167,25 @@
     <None Include="app.ico" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="color.h" />
     <ClInclude Include="game.h" />
     <ClInclude Include="glDriver.h" />
     <ClInclude Include="graphics.h" />
+    <ClInclude Include="location.h" />
     <ClInclude Include="ImageRenderer.h" />
     <ClInclude Include="Resource.h" />
     <ClInclude Include="DepthBasics.h" />
     <ClInclude Include="stdafx.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="color.cpp" />
     <ClCompile Include="game.cpp" />
     <ClCompile Include="helper.h" />
     <ClCompile Include="ImageRenderer.cpp" />
     <ClCompile Include="DepthBasics.cpp" />
     <ClCompile Include="glDriver.cpp" />
     <ClCompile Include="graphics.cpp" />
+    <ClCompile Include="Location.cpp" />
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
