--- a/release/DepthBasics-D2D.vcxproj
+++ b/release/DepthBasics-D2D.vcxproj
@@ -167,18 +167,26 @@
     <None Include="app.ico" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Circle.h" />
     <ClInclude Include="color.h" />
+    <ClInclude Include="ColorSlideCircle.h" />
     <ClInclude Include="game.h" />
     <ClInclude Include="glDriver.h" />
     <ClInclude Include="graphics.h" />
+    <ClInclude Include="CursorCircle.h" />
+    <ClInclude Include="ColorSlideRing.h" />
     <ClInclude Include="location.h" />
     <ClInclude Include="ImageRenderer.h" />
+    <ClInclude Include="LocPair.h" />
     <ClInclude Include="Resource.h" />
     <ClInclude Include="DepthBasics.h" />
     <ClInclude Include="stdafx.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Circle.cpp" />
     <ClCompile Include="color.cpp" />
+    <ClCompile Include="ColorSlideCircle.cpp" />
+    <ClCompile Include="CursorCircle.cpp" />
     <ClCompile Include="game.cpp" />
     <ClCompile Include="helper.h" />
     <ClCompile Include="ImageRenderer.cpp" />
@@ -186,6 +194,7 @@
     <ClCompile Include="glDriver.cpp" />
     <ClCompile Include="graphics.cpp" />
     <ClCompile Include="Location.cpp" />
+    <ClCompile Include="LocPair.cpp" />
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
