--- a/release/DepthBasics-D2D.vcxproj
+++ b/release/DepthBasics-D2D.vcxproj
@@ -174,6 +174,7 @@
     <ClInclude Include="Cursor.h" />
     <ClInclude Include="game.h" />
     <ClInclude Include="glDriver.h" />
+    <ClInclude Include="glDriver_share.h" />
     <ClInclude Include="global.h" />
     <ClInclude Include="graphics.h" />
     <ClInclude Include="CursorCircle.h" />
